# haihu-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETE_SYSTEM_GUIDE.md  Dockerfile  LABELING_SYSTEM_README.md  LEARNING_SYSTEM_README.md  README.md  REFACTORING_PLAN_202506.md  TRAINING_SYSTEM_README.md  benchmark_system.py  config.yaml  debug_dataset_performance.py  demo.py  demo_complete_workflow.py  demo_learning_system.py  demo_phase3.py  demo_training_system.py  docker-compose.yml  install.sh  main.py  minimal_test.py  optimize_training.py  output.json  output.stats.json  package.json  pyproject.toml  pytest.ini  register_video.py  requirements.txt  run_integration_tests.py  run_web_server.sh  simple_demo.py  start_scene_labeling.py  test_mps_device.py  test_video_access.py  torch_import_fix_summary.md  train_game_scene_model.py  train_scene_model.py  (+11 more)
.claude/: settings.local.json
.claude/hooks/: README.md  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: README.md  ci-optimized.yml  ci.yml  test.yml
backups/2025-01-05/: backup_info.json
data/frames/: d41d8cd98f00b204_metadata.json
data/input/: .gitkeep
data/output/: .gitkeep
data/temp/: .gitkeep
data/training/: dataset.db
docker/: healthcheck.py
docs/: API_ROUTES_ANALYSIS.md  API_ROUTES_REFACTORING_SUMMARY.md  DATASET_MANAGER_ANALYSIS.md  PROJECT_IMPROVEMENT_STATUS.md  REFACTORING_RESULTS_PHASE1.md  REFACTORING_RESULTS_PHASE2.md  api_specification.md  inference_frame_review.md  initial_model_implementation_plan.md  training_data_creation_strategy.md
examples/: continuous_learning_example.py
hand_labeling_system/: requirements.txt
hand_labeling_system/backend/: __init__.py
inference_frames/20250708_121052/: index.json
logs/: .gitkeep
models/: .gitkeep
scripts/: cleanup_duplicate_sessions.py  migrate_labeling_data.py
src/: __init__.py
src/classification/: __init__.py  tile_classifier.py
src/core/: __init__.py  error_handler.py  exceptions.py
src/detection/: __init__.py  cached_scene_detector.py  player_detector.py  scene_detector.py  score_reader.py  tile_detector.py  types.py  yolov8_detector.py
src/game/: __init__.py  game_state.py  player.py  simplified_game_state.py  table.py  turn.py
src/integration/: __init__.py  orchestrator.py  result_processor.py  statistics_collector.py  system_integrator.py
src/models/: __init__.py  model_manager.py  tenhou_game_data.py
src/monitoring/: __init__.py  config.py  dashboard.py  decorators.py  error_tracker.py  logger.py  metrics.py  system_monitor.py
src/optimization/: __init__.py  advanced_memory_optimizer.py  batch_processing.py  data_loader.py  gpu_optimizer.py  memory_optimizer.py  performance_optimizer.py
src/output/: __init__.py  tenhou_json_formatter.py
src/pipeline/: __init__.py  ai_pipeline.py  batch_enhanced_game_pipeline.py  enhanced_game_pipeline.py  game_pipeline.py  optimized_ai_pipeline.py  parallel_ai_pipeline.py  simplified_game_pipeline.py
src/rules/: __init__.py
src/tracking/: __init__.py  action_detector.py  action_inferencer.py  change_analyzer.py  history_manager.py  inference_frame_manager.py  simplified_action_detector.py  state_tracker.py
src/training/: __init__.py  annotation_data.py  dataset_manager.py  enhanced_annotation_manager.py  enhanced_annotation_structure.py  enhanced_dataset_manager.py  enhanced_semi_auto_labeler.py  frame_extractor.py  frame_similarity_detector.py  refactored_dataset_manager.py  semi_auto_labeler.py  smart_frame_selector.py  unified_trainer.py
src/utils/: __init__.py  cache_manager.py  config.py  device_utils.py  error_handler.py  exceptions.py  file_io.py  logger.py  (+3 more)
tests/: conftest.py  test_advanced_memory_optimizer.py  test_ai_classification.py  test_ai_detection.py  test_ai_pipeline.py  test_augmentation.py  test_batch_size_optimizer.py  test_config.py  test_config_extended.py  test_data_management_api.py  test_enhanced_features.py  test_enhanced_game_pipeline.py  test_file_io.py  test_file_io_extended.py  test_game_pipeline.py  test_game_state.py  test_inference_frame_save.py  test_integrated_pipeline.py  test_integration.py  test_labeling_integration.py  test_learning_system.py  test_logger.py  test_ml_improvements.py  test_orchestrator.py  test_parallel_ai_pipeline.py  test_performance.py  test_performance_optimization.py  test_player_detector.py  test_refactored_dataset_manager.py  test_refactored_model_trainer.py  test_result_processor.py  test_scene_detector.py  test_scene_detector_enhanced.py  test_score_reader.py  test_simplified_action_detector.py  test_simplified_with_inference.py  test_statistics_collector.py  test_tenhou_game_data.py  test_tenhou_json_formatter.py  test_tenhou_optimization.py  (+4 more)
web_interface/: README.md  app.py  config.py  requirements.txt  run.py
(+185 files in other folders)
